<resources>
    <string name="app_name">Project One Ex2</string>
    <string name="create_new_account">Create New Account</string>
    <string name="password">Password</string>
    <string name="author_name">Author Name</string>
    <string name="this_is_a_comment_text">This is a comment text.</string>
    <string name="_0_likes">0 Likes</string>
    <string name="share">Share</string>
    <string name="what_s_on_your_mind">What\'s on your mind</string>
    <string name="empty_space" />
    <string name="togglebutton">ToggleButton</string>
    <string name="comment">Comment</string>
    <string name="_0_comments">0 comments</string>
    <string name="_0_likes1">0 likes</string>
    <string name="post_content_goes_here">Post content goes here</string>
    <string name="author_name1">Author Name</string>
    <string name="time">time</string>
    <string name="share1">share</string>
    <string name="like">Like</string>
    <string name="logout">Logout</string>
    <string name="home_button">Home Button</string>
    <string name="togglebutton1">ToggleButton</string>
    <string name="posts">Posts</string>
    <string name="empty_background" />
    <string name="messages">Messages</string>
    <string name="videos">Videos</string>
    <string name="marketplace">MarketPlace</string>
    <string name="pictures">Pictures</string>
    <string name="friends">Friends</string>
    <string name="video_button">video Button</string>
    <string name="notification_button">notification Button</string>
    <string name="menu_button">menu Button</string>
    <string name="sign_up">Sign Up</string>
    <string name="nickname">Nickname</string>
    <string name="password2">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="username">Username</string>
    <string name="user_s_profile_photo">User\'s Profile Photo</string>
    <string name="sign_up1">Sign Up</string>
    <string name="togglebutton12">ToggleButton</string>
    <string name="enter_your_post_content_here">Enter your post content here</string>
    <string name="enter_your_post_content_here2">Enter your post content here</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="BaseUrl">http://10.0.2.2:12345/api/</string>
</resources>