<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:backgroundTint="@color/background_color"
    android:layout_height="match_parent">

    <!-- Search Bar -->

    <!-- Space for Content in the Middle -->
    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="30"

                app:srcCompat="@drawable/facebook_logo__2019__svg__1_" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empty_background" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/circular_border_background"
                app:srcCompat="@drawable/ic_search"
                app:tint="#0E0E0E" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/middleInputBoxLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_below="@+id/searchBar"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="20dp">
                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_weight="1"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLines="3"
                android:padding="8dp" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_above="@+id/bottomNavigation"
        android:layout_below="@+id/middleInputBoxLayout"
        app:layout_constraintTop_toBottomOf="@id/contentContainer"
        android:layout_weight="1"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <TextView
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/menu_buttons"
                android:gravity="center"
                android:text="Edit Profile"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/friends"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:background="@drawable/menu_buttons"
                android:gravity="center"
                android:text="@string/friends"
                android:textSize="20sp" />

            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Friend Requests"
                android:textSize="20sp"
                android:background="@drawable/menu_buttons"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:background="@drawable/menu_buttons"
                android:gravity="center"
                android:text="@string/posts"
                android:textSize="20sp" />

            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/videos"
                android:background="@drawable/menu_buttons"/>
            <Button
                android:id="@+id/Logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textStyle="bold"
                android:background="@drawable/radius_logout"

                android:layout_marginBottom="10dp"
                app:rippleColor="#F81605" />

            <Button
                android:id="@+id/Delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Delete Account"
                android:textStyle="bold"
                android:background="@drawable/radius_logout"
                app:rippleColor="#F81605" />

        </LinearLayout>

    </FrameLayout>


    <!-- Bottom Navigation Bar -->
    <LinearLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#1877F2"
        android:orientation="horizontal">

        <!-- Add your bottom navigation items here -->
        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/circular_border_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_home"
            app:tint="#000000" />

        <ImageButton
            android:id="@+id/imageButton3"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/circular_border_background"
            app:srcCompat="@drawable/ic_video"
            app:tint="#0E0E0E" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/circular_border_background"
            app:srcCompat="@drawable/ic_notification"

            app:tint="#0E0E0E" />


        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/circular_border_background"
            app:srcCompat="@drawable/ic_menu"

            app:tint="#FFFFFF" />

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/circular_border_background"
            android:text="@string/togglebutton"
            app:srcCompat="@drawable/ic_mode"

            app:tint="#0E0E0E" />

    </LinearLayout>

</RelativeLayout>
