<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/background_color"
    >

    <!-- Search Bar -->

    <!-- Space for Content in the Middle -->
    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="30"
                app:srcCompat="@drawable/facebook_logo__2019__svg__1_"
                />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empty_space"
                />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="-2"
                android:layout_margin="4dp"

                android:background="@drawable/circular_border_background"
                app:srcCompat="@drawable/ic_comment" />


            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_margin="4dp"
                android:background="@drawable/circular_border_background"
                app:srcCompat="@drawable/ic_search"
                app:tint="#0B0A0A" />

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                app:tint="#131313"
                android:background="@drawable/circular_border_background"
                app:srcCompat="@drawable/ic_upload"
                 />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/middleInputBoxLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchBar"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/imageViewPic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/edtWhatsOnYourMindMiddle"
                android:layout_width="159dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:hint="@string/what_s_on_your_mind"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLines="3"
                android:padding="8dp" />

            <ImageView
                android:id="@+id/imageButtona"
                android:layout_width="4dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:src="@drawable/ic_photo_foreground" />
        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:backgroundTint="#1877F2"
            android:background="@drawable/facbook_radius"
            android:text="@string/share" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_above="@+id/bottomNavigation"
        android:layout_below="@+id/middleInputBoxLayout"
        android:layout_weight="1"
        android:padding="16dp">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#FFFFFF"
            android:foregroundTint="#FFFFFF">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lstPosts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </FrameLayout>


    <!-- Bottom Navigation Bar -->
    <LinearLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#1877F2"
        android:orientation="horizontal">


        <!-- Add your bottom navigation items here -->


        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/circular_border_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_home"
            app:tint="#000000" />

        <ImageButton
            android:id="@+id/imageButton3"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/circular_border_background"
            app:srcCompat="@drawable/ic_video"
            app:tint="#0E0E0E" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/circular_border_background"
            app:srcCompat="@drawable/ic_notification"

            app:tint="#0E0E0E" />


        <ToggleButton
            android:id="@+id/toggleButton3"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/circular_border_background"
            android:text="@string/togglebutton"
            app:srcCompat="@drawable/ic_mode"

            app:tint="#0E0E0E" />

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/circular_border_background"
            app:srcCompat="@drawable/ic_menu"

            app:tint="#0E0E0E" />

    </LinearLayout>


</RelativeLayout>
